--- a/Statics/CSS/style.css
+++ b/Statics/CSS/style.css
@@ -37,12 +37,12 @@ a {
 	border: 0;
 	font-size: 17px;
 }
-/*.location-btn{
+.location-btn{
 	margin-top:1%;
 	margin-left: 91.2%;
     font-size: 17px;
 	width: 92px;
-} */
+} 
 
 /* Chat Page */
 
